<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".GameQuestion2">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="707dp"
        android:layout_height="737dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oldpaper" />

    <Button
        android:id="@+id/buttonQ2A"
        style="@style/choiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Q2choiceA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonQ2C"
        style="@style/choiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q2choiceC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQ2B" />

    <Button
        android:id="@+id/buttonQ2D"
        style="@style/choiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q2choiceD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQ2C" />

    <Button
        android:id="@+id/buttonQ2B"
        style="@style/choiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q2choiceB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQ2A" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="330dp"
        android:layout_height="77dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/supercell_magic_webfont"
        android:text="@string/question_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewToken2"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/supercell_magic_webfont"
        android:text="Token"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTimer2"
        app:layout_constraintTop_toBottomOf="@+id/buttonQ2D" />

    <TextView
        android:id="@+id/textViewTimer2"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/supercell_magic_webfont"
        android:text="Timer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewToken2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQ2D" />
</androidx.constraintlayout.widget.ConstraintLayout>