<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".GameQuestion3">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="707dp"
        android:layout_height="737dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oldpaper" />

    <TextView
        android:id="@+id/textViewToken4"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="336dp"
        android:fontFamily="@font/supercell_magic_webfont"
        android:text="Token"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textViewTimer4"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="336dp"
        android:fontFamily="@font/supercell_magic_webfont"
        android:text="Timer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="323dp"
        android:layout_height="104dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/supercell_magic_webfont"
        android:text="@string/question_4"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonQ1A2"
        style="@style/choiceButton"
        android:layout_width="193dp"
        android:layout_height="76dp"
        android:layout_marginTop="60dp"
        android:text="@string/Q4choiceA"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonQ1A3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/buttonQ1A4"
        style="@style/choiceButton"
        android:layout_width="180dp"
        android:layout_height="72dp"
        android:layout_marginTop="164dp"
        android:text="@string/Q4choiceD"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonQ1A5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/buttonQ1A5"
        style="@style/choiceButton"
        android:layout_width="194dp"
        android:layout_height="74dp"
        android:layout_marginTop="164dp"
        android:text="@string/Q4choiceC"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonQ1A4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/buttonQ1A3"
        style="@style/choiceButton"
        android:layout_width="186dp"
        android:layout_height="76dp"
        android:layout_marginTop="60dp"
        android:text="@string/Q4choiceB"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonQ1A2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>